--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -114,15 +114,15 @@
                         <span class="tools-word">Flows</span><i class="material-icons md-mini"></i>
                       </span>
                     </button>
-                    <md-menu-content width="3">
+                    <md-menu-content width="3" class="flows-menu-box">
                       <md-menu-item>
-                        <md-button ui-sref="app.report.flow" style="padding-top:0;">Flow</md-button>
+                        <md-button ui-sref="app.report.flow" style="padding-top:0;"><i class="icon-yw-01 fonts15"></i>Flow</md-button>
                       </md-menu-item>
                       <md-menu-item>
-                        <md-button ui-sref="app.report.lander" style="padding-top:0;">Lander</md-button>
+                        <md-button ui-sref="app.report.lander" style="padding-top:0;"><i class="icon-shm fonts15"></i>Lander</md-button>
                       </md-menu-item>
                       <md-menu-item>
-                        <md-button ui-sref="app.report.offer" style="padding-top:0;">Offer</md-button>
+                        <md-button ui-sref="app.report.offer" style="padding-top:0;"><i class="icon-tasks fonts15"></i>Offer</md-button>
                       </md-menu-item>
                     </md-menu-content>
                   </md-menu>
@@ -173,12 +173,12 @@
                         <span class="tools-word">Tools</span><i class="material-icons md-mini"></i>
                       </span>
                     </button>
-                    <md-menu-content width="3">
+                    <md-menu-content width="3" class="tools-menu-box">
                       <md-menu-item>
-                        <md-button ui-sref="app.suddenChange" style="padding-top:0;">Sudden Change</md-button>
+                        <md-button ui-sref="app.suddenChange" style="padding-top:0;"><i class="icon-bolt"></i> Sudden Change</md-button>
                       </md-menu-item>
                       <md-menu-item>
-                        <md-button ui-sref="app.fraudFilter" style="padding-top:0;">Fraud Filter</md-button>
+                        <md-button ui-sref="app.fraudFilter" style="padding-top:0;"><i class="icon-filter"></i>Fraud Filter</md-button>
                       </md-menu-item>
                     </md-menu-content>
                   </md-menu>
