--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -157,7 +157,7 @@
             <li ui-sref-active="active" class="nav-tips" has-permission="report.networkoffer.show" operation="show">
                 <a ui-sref="app.report.tsOfferReport" md-ink-ripple>
                     <em class="rd"></em>
-                    <span>{{'Network Offers' | translate}}
+                    <span>{{'Offer API' | translate}}
                      <i class="icon-question-sign">
                        <span class="nav-tips-font">Sychronize offer list from 3rd party affiliate networks</span>
                       </i>
