添加dsp功能，入口

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -3,10 +3,8 @@
         <!-- <md-button class="md-icon-button" hide-gt-sm ng-click="toggleLeftNav()" aria-label="Toggle Left Nav">
             <md-icon>menu</md-icon>
         </md-button> -->
-        <h1><a class="home-link" ui-sref="app.report.campaign"><img src="../assets/img/logo-three.png"></a></h1>
-        <div flex></div>
-        <div class="changeplan hide">
-            <a href="#">Choose Plan<i class="icon-choose fonts28"></i></a>
+        <h1><a class="home-link" ui-sref="app.report.campaign"><img src="../assets/img/logo-four.png"></a></h1>
+        <div flex>
         </div>
         <div class="profile-timezone">
           <md-select class="cs-subform-select" ng-model="profileTimezone" required ng-change="changeTimezone(profileTimezone)">
@@ -174,9 +172,11 @@
                       </span>
                     </button>
                     <md-menu-content width="3" class="tools-menu-box">
+                      <!--
                       <md-menu-item>
                         <md-button ui-sref="app.suddenChange" style="padding-top:0;"><i class="icon-bolt"></i> Sudden Change</md-button>
                       </md-menu-item>
+                      -->
                       <md-menu-item>
                         <md-button ui-sref="app.fraudFilter" style="padding-top:0;"><i class="icon-filter"></i>Fraud Filter</md-button>
                       </md-menu-item>
