--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -119,16 +119,42 @@
                 <label class="col-sm-3 control-label">Tags：</label>
                 <div class="col-sm-7">
                     <selectize config='tagsFilter.config' options='tagsFilter.options' ng-model="tags"></selectize>
-                    <!-- <md-chips
-                            ng-model="tags"
-                            readonly="ctrl.readonly"
-                            md-removable="ctrl.removable"
-                            placeholder="Enter a tag"
-                            delete-button-label="Remove Tag"
-                            delete-hint="Press delete to remove tag"
-                            secondary-placeholder="+Tag"
-                            md-max-chips="10">
-                    </md-chips> -->
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Conversion cap：</label>
+                <div class="col-sm-7">
+                  <label class="radio-inline">
+                      <input type="radio" name="capEnabled" ng-model="item.capEnabled" value="1" required>Active
+                  </label>
+                  <label class="radio-inline">
+                      <input type="radio" name="capEnabled" ng-model="item.capEnabled" value="0" required>Inactive
+                  </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Daily cap：</label>
+                <div class="col-sm-7">
+                    <input type="text" class="form-control dollar-input" ng-model="item.dailyCap" name="dailyCap"  ng-required="item.capEnabled == 1">
+                    <span style="color:red" ng-show="editForm.dailyCap.$dirty && editForm.dailyCap.$invalid">
+                      <span ng-show="editForm.dailyCap.$error.required">DailyCap is required.</span>
+                    </span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Time zone：</label>
+                <div class="col-sm-7">
+                  <md-select ng-model="item.capTimezoneId" ng-required="item.capEnabled == 1">
+                    <md-option ng-repeat="tz in timezones" value="{{tz.id}},{{tz.utcShift}}">{{tz.detail}}</md-option>
+                  </md-select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-3 control-label">Redirect offer：</label>
+                <div class="col-sm-7">
+                  <md-select ng-model="item.redirectOffer" ng-required="item.capEnabled == 1">
+                    <md-option ng-repeat="offer in offers" value="{{offer.id}}">{{offer.name}}</md-option>
+                  </md-select>
                 </div>
             </div>
         </div>
