--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -27,6 +27,7 @@
             <a href="http://www.newbidder.com"><img src="img/logo-3.png"></a>
             <div id="menu3">
                 <ul class="nav-col">
+                    <li><a href="http://mdsp.newbidder.com/pages/login/">MDSP</a></li>
                     <li><a href="#feature">Feature</a></li>
                     <li><a href="#demo">Demo</a></li>
                     <li><a href="http://discourse.newbidder.com/">Forum</a></li>
@@ -44,6 +45,7 @@
             <nav>
                 <a href="http://www.newbidder.com"><img src="img/logo-two.png" style="width:148px;float:left;margin-top:10px;"></a>
                 <ul>
+                    <li><a href="http://mdsp.newbidder.com/pages/login/">MDSP</a></li>
                     <li><a href="#feature2">Feature</a></li>
                     <li><a href="#demo2">Demo</a></li>
                     <li><a href="http://discourse.newbidder.com/">Forum</a></li>
@@ -86,6 +88,39 @@
         </a>
     </div>
 </header>
+<div class="promotion-box bg-success">
+  <section class="container">
+    <div class="row">
+      <div>
+        <p class="desc text-center">
+          <img src="img/promotion.png" alt="promotion">Promotion: First Top up in Newbidder Dsp get 8% extra bonus, you also can continuously get 4% extra bonus in the next payment cycle.
+        </p>
+      </div>
+    </div>
+  </section>
+</div>
+<div id="mdsp" class="mdsp-box">
+  <section class="container">
+    <div class="row">
+      <div class="col-md-6 free-box">
+        <h4><i>4</i> <span>ways to get your free account or you will be charged starting from September</span></h4>
+        <p><i>1. </i><span>Buy traffic through Newbidder Mdsp</span></p>
+        <p><i>2. </i><span> Write an review of Newbidder TRK and post on forum like STM, Affiliatefix, Blackhatworld.,etc, send me link to activate your free account</span></p>
+        <p><i>3. </i><span>Share the review link to your social account like Facebook, Twitter, Wechat, Line</span></p>
+        <p><i>4. </i><span>Succeed to refer an friend to use newbidder trk and make an subscription or execute the 4 way to get the free account</span></p>
+      </div>
+      <div class="col-md-6 mdsp-msg">
+        <h3 style="margin-bottom: 15px;">A Self-serve Mobile Advertising Platform</h3>
+        <p class="desc p-1">Over 50 Ad Exchanges available with global reach</p>
+        <p class="desc p-2">100% performance oriented with cutting-edge machine learning algorithms</p>
+        <p class="desc p-3">100% self-serve platform</p>
+        <p class="desc p-4">Natively integrated with 6 major conversion tracking systems</p>
+
+        <a href="#contact2"><button class="plan-btn" style="margin-bottom: 0;">Contact Us<i class="icon-arrow-right"></i></button></a>
+      </div>
+    </div>
+  </section>
+</div>
 <section id="pricing">
     <div class="container" id="pricing2">
         <div class="pricing-box clearfix">
