--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -103,6 +103,7 @@
   <section class="container">
     <div class="row">
       <div class="col-md-6 free-box">
+        <h3 style="margin-bottom: 20px;height: 49px;"><img src="img/trk_logo.png"></h3>
         <h4><i>4</i> <span>ways to get your free account or you will be charged starting from September</span></h4>
         <p><i>1. </i><span>Buy traffic through Newbidder Mdsp</span></p>
         <p><i>2. </i><span> Write an review of Newbidder TRK and post on forum like STM, Affiliatefix, Blackhatworld.,etc, send me link to activate your free account</span></p>
@@ -110,7 +111,7 @@
         <p><i>4. </i><span>Succeed to refer an friend to use newbidder trk and make an subscription or execute the 4 way to get the free account</span></p>
       </div>
       <div class="col-md-6 mdsp-msg">
-        <h3 style="margin-bottom: 15px;">A Self-serve Mobile Advertising Platform</h3>
+        <h3 style="margin-bottom: 20px;height: 49px;"><img src="http://cdn.avazutracking.net/images/201708/056/a26f7e3990cf4ac3abbbb034b7f17d60_277x49.png"></h3>
         <p class="desc p-1">Over 50 Ad Exchanges available with global reach</p>
         <p class="desc p-2">100% performance oriented with cutting-edge machine learning algorithms</p>
         <p class="desc p-3">100% self-serve platform</p>
