--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -3,7 +3,7 @@
       <!-- <md-button class="md-icon-button" hide-gt-sm ng-click="toggleLeftNav()" aria-label="Toggle Left Nav">
           <md-icon>menu</md-icon>
       </md-button> -->
-      <h1><a class="home-link" ui-sref="app.report.campaign"><img src="../assets/img/logo-three.png"></a></h1>
+      <h1><a class="home-link" ui-sref="app.report.campaign"><img src="../assets/img/logo-four1.png"></a></h1>
 
       <div flex></div>
       <div class="changeplan hide">
