--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -172,11 +172,9 @@
                       </span>
                     </button>
                     <md-menu-content width="3" class="tools-menu-box">
-                      <!--
                       <md-menu-item>
-                        <md-button ui-sref="app.suddenChange" style="padding-top:0;"><i class="icon-bolt"></i> Sudden Change</md-button>
+                        <md-button ui-sref="app.suddenChange" style="padding-top:0;"><i class="icon-bolt"></i>Auto</md-button>
                       </md-menu-item>
-                      -->
                       <md-menu-item>
                         <md-button ui-sref="app.fraudFilter" style="padding-top:0;"><i class="icon-filter"></i>Fraud Filter</md-button>
                       </md-menu-item>
