--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -26,8 +26,8 @@
         <div class="nav-box">
             <a href="http://www.newbidder.com"><img src="img/logo-3.png"></a>
             <div id="menu3">
+                <span class="free-trial-btn"><a style="background: #f43333;" href="http://mdsp.newbidder.com/pages/login/">MDSP</a></span>
                 <ul class="nav-col">
-                    <li><a href="http://mdsp.newbidder.com/pages/login/">MDSP</a></li>
                     <li><a href="#feature">Feature</a></li>
                     <li><a href="#demo">Demo</a></li>
                     <li><a href="http://discourse.newbidder.com/">Forum</a></li>
@@ -45,7 +45,6 @@
             <nav>
                 <a href="http://www.newbidder.com"><img src="img/logo-two.png" style="width:148px;float:left;margin-top:10px;"></a>
                 <ul>
-                    <li><a href="http://mdsp.newbidder.com/pages/login/">MDSP</a></li>
                     <li><a href="#feature2">Feature</a></li>
                     <li><a href="#demo2">Demo</a></li>
                     <li><a href="http://discourse.newbidder.com/">Forum</a></li>
@@ -53,6 +52,7 @@
                     <li><a href="http://panel.newbidder.com/#/access/signin">Sign in</a></li>
                     <li><a href="http://panel.newbidder.com/#/access/signup">Sign up</a></li>
                     <li class="free-trial-btn"><a href="http://panel.newbidder.com/#/access/signin">Try it Free</a></li>
+                    <li class="free-trial-btn"><a style="background: #f43333;" href="http://mdsp.newbidder.com/pages/login/">MDSP</a></li>
                 </ul>
             </nav>
         </div>
