修改官网样式

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=20170815a">
 </head>
 
 <body>
@@ -107,8 +107,8 @@
         <h4><i>4</i> <span>ways to get your free account or you will be charged starting from September</span></h4>
         <p><i>1. </i><span>Buy traffic through Newbidder Mdsp</span></p>
         <p><i>2. </i><span> Write an review of Newbidder TRK and post on forum like STM, Affiliatefix, Blackhatworld.,etc, send me link to activate your free account</span></p>
-        <p><i>3. </i><span>Share the review link to your social account like Facebook, Twitter, Wechat, Line</span></p>
-        <p><i>4. </i><span>Succeed to refer an friend to use newbidder trk and make an subscription or execute the 4 way to get the free account</span></p>
+        <p><i>3. </i><span>Share the <a class="review-link" href="http://www.newbidder.com/campaign.html">review link</a> to your social account like Facebook, Twitter, Wechat, Line</span></p>
+        <p><i>4. </i><span>Succeed to refer an friend to use newbidder trk and make an subscription or execute one of the 4 way to get the free account</span></p>
       </div>
       <div class="col-md-6 mdsp-msg">
         <h3 style="margin-bottom: 20px;height: 49px;"><img src="http://cdn.avazutracking.net/images/201708/056/a26f7e3990cf4ac3abbbb034b7f17d60_277x49.png"></h3>
