页面样式微调

--- a/Front/src/tpl/free-account-info-dialog.html
+++ b/Front/src/tpl/free-account-info-dialog.html
@@ -6,7 +6,7 @@
   </md-toolbar>
   <md-dialog-content class="md-dialog-content" style="padding-top: 15px;">
     <h3><i>4</i><span>ways to get your free account or you will be charged starting from September<span></h3>
-    <p><i>1. </i><span>Buy traffic through Newbidder <a style="color: #2770ea;" href="http://mdsp.newbidder.com/pages/login/">Mdsp</a></span></p>
+    <p><i>1. </i><span>Buy traffic through Newbidder <a style="color: #2770ea;" href="http://mdsp.newbidder.com/pages/login/" target="_blank">Mdsp</a></span></p>
     <p><i>2. </i><span>Write an review of Newbidder TRK and post on forum like STM, Affiliatefix, Blackhatworld.,etc, send me link to activate your free account</span></p>
     <p><i>3. </i><span>Share the <a style="color: #2770ea;" href="http://www.newbidder.com/campaign.html" target="_blank">review link</a> to your social account like Facebook, Twitter, Wechat, Line</span></p>
     <p><i>4. </i><span>Succeed to refer an friend to use newbidder trk and make an subscription or execute one of the 4 way to get the free account</span></p>
