--- a/Front/src/tpl/delete-confirm-dialog.html
+++ b/Front/src/tpl/delete-confirm-dialog.html
@@ -2,7 +2,7 @@
     <md-dialog-content class="md-dialog-content">
         <h2 class="md-title">{{ctrl.title | translate}}</h2>
         <p>{{ctrl.content | translate}}</p>
-
+        <p ng-if="ctrl.type == 'offer'" class="text-danger">Note that conversion cap maybe inactive when the offer be redirected.</p>
         <p class="text-danger" ng-if="ctrl.error" layout="row" layout-align="center center">
             <span><md-icon class="text-danger">error_outline</md-icon>&nbsp; {{ctrl.error}}</span>
         </p>
