--- a/Front/src/tpl/offer-edit-dialog.html
+++ b/Front/src/tpl/offer-edit-dialog.html
@@ -17,7 +17,7 @@
         </div>
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
             <div class="form-group">
-                <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>：</label>
+                <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>:</label>
                 <div class="col-sm-7">
                     <input type="text" name="name" class="form-control" ng-model="item.name"
                         ng-change="nameChanged(item.name)"
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
+                <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>:</label>
                 <div class="col-sm-7">
                     <input my-text="" type="text" name="url" class="form-control" ng-model="item.url" ng-blur="validateUrl()" required>
                     <span style="color:red" ng-show="editForm.url.$invalid">
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Postback Url：</label>
+                <label class="col-sm-3 control-label">Postback Url:</label>
                 <div class="col-sm-7">
                     <input type="text" class="form-control" ng-model="item.postbackUrl" ng-readonly="true">
                 </div>
@@ -95,7 +95,7 @@
                     </md-button>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Payout<span class="star-icon">*</span>：</label>
+                <label class="col-sm-3 control-label">Payout<span class="star-icon">*</span>:</label>
                 <div class="col-sm-7">
                     <label class="radio-inline">
                         <input type="radio" name="payoutMode" ng-model="item.payoutMode" value="0" required> Auto
@@ -116,13 +116,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Tags：</label>
+                <label class="col-sm-3 control-label">Tags:</label>
                 <div class="col-sm-7">
                     <selectize config='tagsFilter.config' options='tagsFilter.options' ng-model="tags"></selectize>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Conversion cap：</label>
+                <label class="col-sm-3 control-label">Conversion cap:</label>
                 <div class="col-sm-7">
                   <label class="radio-inline">
                       <input type="radio" name="capEnabled" ng-model="item.capEnabled" value="1" required>Active
@@ -133,26 +133,26 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Daily cap：</label>
+                <label class="col-sm-3 control-label">Daily cap<span class="star-icon" ng-if="item.capEnabled == 1">*</span>:</label>
                 <div class="col-sm-7">
-                    <input type="text" class="form-control dollar-input" ng-model="item.dailyCap" name="dailyCap"  ng-required="item.capEnabled == 1">
+                    <input type="number" class="form-control dollar-input" ng-model="item.dailyCap" name="dailyCap"  ng-required="item.capEnabled == 1">
                     <span style="color:red" ng-show="editForm.dailyCap.$dirty && editForm.dailyCap.$invalid">
                       <span ng-show="editForm.dailyCap.$error.required">DailyCap is required.</span>
                     </span>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Time zone：</label>
+                <label class="col-sm-3 control-label">Time zone:</label>
                 <div class="col-sm-7">
                   <md-select ng-model="item.capTimezoneId" ng-required="item.capEnabled == 1">
-                    <md-option ng-repeat="tz in timezones" value="{{tz.id}},{{tz.utcShift}}">{{tz.detail}}</md-option>
+                    <md-option ng-repeat="tz in timezones" value="{{tz.id}}">{{tz.detail}}</md-option>
                   </md-select>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-3 control-label">Redirect offer：</label>
+                <label class="col-sm-3 control-label">Redirect offer:</label>
                 <div class="col-sm-7">
-                  <md-select ng-model="item.redirectOffer" ng-required="item.capEnabled == 1">
+                  <md-select ng-model="item.redirectOfferId" ng-required="item.capEnabled == 1">
                     <md-option ng-repeat="offer in offers" value="{{offer.id}}">{{offer.name}}</md-option>
                   </md-select>
                 </div>
