--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -104,11 +104,11 @@
     <div class="row">
       <div class="col-md-6 free-box">
         <h3 style="margin-bottom: 20px;height: 49px;"><img src="img/trk_logo.png"></h3>
-        <h4><i>4</i> <span>ways to get your free account or you will be charged starting from September</span></h4>
-        <p><i>1. </i><span>Buy traffic through Newbidder Mdsp</span></p>
-        <p><i>2. </i><span> Write an review of Newbidder TRK and post on forum like STM, Affiliatefix, Blackhatworld.,etc, send me link to activate your free account</span></p>
-        <p><i>3. </i><span>Share the <a class="review-link" href="http://www.newbidder.com/campaign.html">review link</a> to your social account like Facebook, Twitter, Wechat, Line</span></p>
-        <p><i>4. </i><span>Succeed to refer an friend to use newbidder trk and make an subscription or execute one of the 4 way to get the free account</span></p>
+        <h4>Sincerely appreciate your support, we are now having a promotion which you can get your free account or you will be charged starting from September according to below 4 ways, they are:</h4>
+        <p><i>1. </i><span>Bought or buying traffic through Newbidder Mdsp</span></p>
+        <p><i>2. </i><span>Writie an review of Newbidder TRK and post it on relevant forums like STM, Affiliatefix, Blackhatworld etc., remember to make a screenshot and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
+        <p><i>3. </i><span>Share the review link on your social accounts, such like Facebook, Twitter, Wechat moments, Line etc., remember to make a screenshot and mail to <a class="review-link" href="mailto:support@newbidder.com">support@newbidder.com</a>, after comfirmation we will activate your free account</span></p>
+        <p><i>4. </i><span>Succeed to refer an friend to register Newbidder TRK and make an subscription or execute one of the 4 ways to get the free account.</span></p>
       </div>
       <div class="col-md-6 mdsp-msg">
         <h3 style="margin-bottom: 20px;height: 49px;"><img src="http://cdn.avazutracking.net/images/201708/056/a26f7e3990cf4ac3abbbb034b7f17d60_277x49.png"></h3>
@@ -133,18 +133,49 @@
                         <h2>Free Plan<small>(Forever)</small></h2>
                     </div>
                     <div class="pricing-plan">
+                      <div class="p-header p-header2">
+                        <span class="money-size">Forever</span>
+                      </div>
+                      <div class="p-header text-center">
+                        <small class="money-icon">$</small>
+                        <span class="money-size">0</span>
+                        <small class="money-small">/Mon</small>
+                      </div>
                         <ol>
-                            <li><i class="icon-ok"></i>Unlimited events</li>
-                            <li><i class="icon-ok"></i>Skype support 24/7</li>
-                            <li><i class="icon-ok"></i>6 months data retention</li>
-                            <li><i class="icon-ok"></i>1 custom tracking domain</li>
-                            <li><i class="icon-ok"></i>Bot filter (only 1)<a href="#" data-toggle="tooltip" title="Free plan can create one rule to filter bot ip
-"><i class="icon-question-sign"></i></a></li>
-                            <li><i class="icon-ok"></i>Sudden change (only 1)<a href="#" data-toggle="tooltip" title="Can create an rule to inform you via email with the sudden change. for example, you will be informed once an websiteid is cost higher than 2 usd but no conversion
-"><i class="icon-question-sign"></i></a></li>
-                            <li><i class="icon-ok"></i>3rd Affiliate network API integrate (only 1)<a href="#" data-toggle="tooltip" title="if you running offer from mobidea, and test multi offer daily. you don’t need to create one by one in newbidder tracking again. we have integrate with 6 affiliate network through api that you can manage your offer in our platform and meanwhile you can  import the offer from our system"><i class="icon-question-sign"></i></a></li>
-                            <li><i class="icon-ok"></i>3rd Traffic Source API integrate (only 1)<a href="#" data-toggle="tooltip" title="We have integrated with 3 traffic source through api, take exoclick for example, we pull the campaign and other parameter data from the exoclick to our system, and you can get the real cost and roi with different parameter.
-"><i class="icon-question-sign"></i></a></li>
+                            <li><i class="icon-ok"></i><div>Unlimited events</div></li>
+                            <li><i class="icon-ok"></i><div>Skype support 24/7</div></li>
+                            <li><i class="icon-ok"></i><div>6 months data retention</div></li>
+                            <li><i class="icon-ok"></i><div>1 custom tracking domain</div></li>
+                            <li>
+                              <i class="icon-ok"></i>
+                              <div>Bot filter (only 1)
+                                <a href="#" data-toggle="tooltip" title="Free plan can create one rule to filter bot ip">
+                                  <i class="icon-question-sign"></i>
+                                </a>
+                              </div>
+                            </li>
+                            <li>
+                              <i class="icon-ok"></i>
+                              <div>Sudden change (only 1)
+                                <a href="#" data-toggle="tooltip" title="Can create an rule to inform you via email with the sudden change. for example, you will be informed once an websiteid is cost higher than 2 usd but no conversion">
+                                  <i class="icon-question-sign"></i>
+                                </a>
+                              </div>
+                            </li>
+                            <li>
+                              <i class="icon-ok"></i>
+                              <div>3rd Affiliate network API integrate (only 1)
+                                <a href="#" data-toggle="tooltip" title="if you running offer from mobidea, and test multi offer daily. you don’t need to create one by one in newbidder tracking again. we have integrate with 6 affiliate network through api that you can manage your offer in our platform and meanwhile you can  import the offer from our system"><i class="icon-question-sign"></i></a>
+                              </div>
+                            </li>
+                            <li>
+                              <i class="icon-ok"></i>
+                              <div>3rd Traffic Source API integrate (only 1)
+                                <a href="#" data-toggle="tooltip" title="We have integrated with 3 traffic source through api, take exoclick for example, we pull the campaign and other parameter data from the exoclick to our system, and you can get the real cost and roi with different parameter.">
+                                  <i class="icon-question-sign"></i>
+                                </a>
+                              </div>
+                            </li>
                         </ol>
                         <a href="http://panel.newbidder.com/#/access/signup">
                             <button class="free-btn">Select Plan<i class="icon-arrow-right"></i></button>
@@ -153,7 +184,98 @@
                 </li>
                 <li class="pricing-custom">
                     <div class="pricing-custom-title">
-                        <h2>Custom Plan</h2>
+                        <h2>Pro Plan</h2>
+                    </div>
+                    <div class="pricing-plan">
+                      <div class="p-header p-header2">
+                        <b class="line"></b>
+                        <small class="money-icon">$</small>
+                        <span class="money-size">99</span>
+                        <small class="money-small">/Mon</small>
+                      </div>
+                      <div class="p-header text-center">
+                        <small class="money-icon">$</small>
+                        <span class="money-size">49</span>
+                        <small class="money-small">/Mon</small>
+                      </div>
+                        <ol>
+                            <li><i class="icon-ok"></i>1000000 included events</li>
+                            <li><i class="icon-ok"></i>0.049/1000 overage charge</li>
+                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
+                            <li><i class="icon-ok"></i>6 month data retention</li>
+                            <li><i class="icon-ok"></i>5 custom tracking domains</li>
+                            <li><i class="icon-ok"></i>1 additional user</li>
+                            <li><i class="icon-ok"></i>10%volume discount</li>
+                        </ol>
+                        <a href="http://panel.newbidder.com/#/access/signup">
+                            <button class="plan-btn">Contact Us<i class="icon-arrow-right"></i></button>
+                        </a>
+                    </div>
+                </li>
+                <li class="pricing-custom">
+                    <div class="pricing-custom-title">
+                        <h2>Agency Plan</h2>
+                    </div>
+                    <div class="pricing-plan">
+                        <div class="p-header p-header2">
+                          <b class="line"></b>
+                          <small class="money-icon">$</small>
+                          <span class="money-size">399</span>
+                          <small class="money-small">/Mon</small>
+                        </div>
+                        <div class="p-header text-center">
+                          <small class="money-icon">$</small>
+                          <span class="money-size">199</span>
+                          <small class="money-small">/Mon</small>
+                        </div>
+                        <ol>
+                            <li><i class="icon-ok"></i>10000000 included events</li>
+                            <li><i class="icon-ok"></i>0.02/1000 overage charge</li>
+                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
+                            <li><i class="icon-ok"></i>1 year data retention</li>
+                            <li><i class="icon-ok"></i>10 custom tracking domains</li>
+                            <li><i class="icon-ok"></i>2 additional users</li>
+                            <li><i class="icon-ok"></i>15%volume discount</li>
+                        </ol>
+                        <a href="http://panel.newbidder.com/#/access/signup">
+                            <button class="plan-btn">Contact Us<i class="icon-arrow-right"></i></button>
+                        </a>
+                    </div>
+                </li>
+                <li class="pricing-custom">
+                    <div class="pricing-custom-title">
+                        <h2>Enterprise Plan</h2>
+                    </div>
+                    <div class="pricing-plan">
+                      <div class="p-header p-header2">
+                        <b class="line"></b>
+                        <small class="money-icon">$</small>
+                        <span class="money-size">999</span>
+                        <small class="money-small">/Mon</small>
+                      </div>
+                      <div class="p-header text-center">
+                        <small class="money-icon">$</small>
+                        <span class="money-size">499</span>
+                        <small class="money-small">/Mon</small>
+                      </div>
+                        <ol>
+                            <li><i class="icon-ok"></i>30000000 included events</li>
+                            <li><i class="icon-ok"></i>0.017/1000 overage charge</li>
+                            <li><i class="icon-ok"></i>Skype Support 24/7</li>
+                            <li><i class="icon-ok"></i>2 year data retention</li>
+                            <li><i class="icon-ok"></i>30 custom tracking domains</li>
+                            <li><i class="icon-ok"></i>5 additional users</li>
+                            <li><i class="icon-ok"></i>20%volume discount</li>
+                        </ol>
+                        <a href="http://panel.newbidder.com/#/access/signup">
+                            <button class="plan-btn">Contact Us<i class="icon-arrow-right"></i></button>
+                        </a>
+                    </div>
+                </li>
+                <!--
+                <li class="pricing-custom">
+                    <div class="pricing-custom-title">
+                        <h2>Enterprise Plan</h2>
                     </div>
                     <div class="pricing-plan">
                         <ol>
@@ -170,6 +292,7 @@
                         </a>
                     </div>
                 </li>
+                -->
             </ul>
         </div>
     </div>
@@ -398,7 +521,7 @@
             <div class="col-xs-6 col-sm-4">
                 <h4 class="con-title">Get Connected</h4>
                 <ul class="list-01">
-                    <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
+                    <li><a href="https://www.facebook.com/newbiddertrk/" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
                     <li><a href="https://twitter.com/newbidder" target="_blank"><i class="icon-twitter-sign"></i>Twitter</a></li>
                     <li><a href="http://www.linkedin.com/company-beta/16200396"><i class="icon-linkedin-sign"></i>LinkedIn</a></li>
                 </ul>
