--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -15,20 +15,20 @@
   					<td>Current period:</td>
   					<td>{{item.statistic.from}} - {{item.statistic.to}}</td>
   				</tr>
-  				<!--<tr>
+  				<tr>
   					<td>Billed events:</td>
   					<td>{{item.statistic.billedEvents}}</td>
-  				</tr>-->
+  				</tr>
   				<tr>
   					<td>Total events:</td>
   					<td>{{item.statistic.totalEvents}}</td>
   				</tr>
   				<tr>
   					<td>Included events:</td>
-  					<!--<td>{{item.statistic.includedEvents}}</td>-->
-						<td>Unlimited</td>
+  					<td>{{item.statistic.includedEvents}}</td>
+						<!--<td>Unlimited</td>-->
   				</tr>
-  				<!--<tr>
+  				<tr>
   					<td>Free events:</td>
   					<td>{{item.statistic.freeEvents}}</td>
   				</tr>
@@ -43,7 +43,7 @@
   				<tr>
   					<td>Overage cost:</td>
   					<td>{{item.statistic.overageCost}}</td>
-  				</tr>-->
+  				</tr>
   			</table>
   		</div>
     </div>
